--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 
 ## Overview
 
-Tools for working with the Genius API.
+Tools for working with the *Genius* (FKA *Rap Genius*) API.
 
 - Genius Developers Site: [https://genius.com/developers](https://genius.com/developers)
 - Genius API Docs: [https://docs.genius.com/](https://docs.genius.com/)
@@ -47,7 +47,9 @@ install.packages("geniusr")
 
 ## Use
 
-### How many times did Kanye West say "good morning", on the track "Good Morning"?
+Start with the [basics!](https://ewenme.github.io/geniusr/articles/geniusr.html)
+
+### How many times did 'Ye say "good morning", on the track "Good Morning"?
 
 ```{r good_morning_count}
 
@@ -60,53 +62,10 @@ get_lyrics_search(artist_name = "Kanye West",
                   song_title = "Good Morning") %>% 
   # get lyric bigrams
   unnest_tokens(bigram, line, token = "ngrams", n = 2) %>%
-  # count bigram frequency
-  count(bigram) %>%
   # look for good morning
-  filter(bigram == "good morning")
-```
-
-### Positive / Negative Sentiment in Coloring Book, by Chance the Rapper
-
-```{r coloring_sentiment}
-
-library(purrr)
-library(ggplot2)
-
-# set lexicon
-bing <- get_sentiments("bing")
-
-# scrape album tracklist
-tracklist <- get_album_tracklist_search(artist_name = "Chance the Rapper",
-                                        album_name = "Coloring Book")
-
-# scrape album lyrics
-lyrics <- map_df(tracklist$song_lyrics_url, get_lyrics_url)
-
-# counting negative / positive words
-sentiment <- lyrics %>%
-  unnest_tokens(word, line) %>%
-  # remove stop words
-  anti_join(stop_words) %>%
-  # join afinn score
-  inner_join(bing) %>%
-  # count negative / positive words
-  count(word, sentiment, sort = TRUE) %>%
-  ungroup()
-
-# plotting top contributors
-sentiment %>%
-  group_by(sentiment) %>%
-  top_n(10) %>%
-  ungroup() %>%
-  mutate(word = reorder(word, n)) %>%
-  ggplot(aes(word, n, fill = sentiment)) +
-  geom_col(show.legend = FALSE) +
-  facet_wrap(~sentiment, scales = "free_y") +
-  labs(y = "Coloring Book: Words that contribute the most to positive and negative sentiment",
-       x = NULL) +
-  coord_flip() +
-  theme_minimal()
+  filter(bigram == "good morning") %>% 
+  # count bigram frequency
+  nrow()
 ```
 
 ## Other options
