--- a/vignettes/geniusr.Rmd
+++ b/vignettes/geniusr.Rmd
@@ -10,7 +10,10 @@ vignette: >
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  message = FALSE,
+  warning = FALSE,
+  eval = FALSE
 )
 ```
 
